AC_PREREQ([2.69])
AC_INIT([prov], [1.0.0], [daviersanbell@gmail.com], [prov], [https://github.com/DavierSB/prov])
AC_CONFIG_SRCDIR([src/main.cpp])
AC_LANG([C++])
AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE([subdir-objects])
LT_PREREQ([2.4.6])
LT_INIT
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P
AC_PROG_RANLIB
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
